# vecml

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: docker.yml  images.yml
assets/seed/: SOURCES.md
datasets/svg-stack-simple/: README.md
docs/: how-the-model-works.html  overnight-flight-report.html  plan.md
docs/research/: 2026-07-21-autotrace-detector.md  2026-07-21-dedupe-gate.md
docs/research/2026-07-20-deep-research/: README.md  engine-audit.md  engine.md  fuel.md  recipe.md
docs/research/2026-07-21-intent-priors/: README.md  conditioning.md  document-intent.md  engine-label-integration.md  grounding.md  primitives.md
docs/research/2026-07-21-nas-corpus/: content-audit.md  yield-estimate.md
docs/research/2026-07-21-sources/: arxiv-figures.md  diagram-farm.md  figr-svg.md  layout-compositor.md  openclipart-mirrors.md  small-clean-sets.md  svg-diagrams.md  svg-stack-remainder.md  svgrepo.md  wikimedia-commons.md  wordmark-compositor.md
docs/research/2026-07-21-wrecker/: IMPLEMENTATION.md  README.md  calibration.md  realism-diversity.md  sota.md  taxonomy.md
docs/research/autotrace-eval/: features.json  model.json
infra/flightplans/: ce-sweep.json  e2e3.json  e4.json  hippo.json  hippo48-1m.json  hippo48-500k-r2.json  hippo48-500k.json  hippo48.json  labels-ab.json  labels-b48.json  labels-probe.json  labels-sanity.json  night-extras.json
infra/recipes/: perflab-5090.json
infra/runpod/: Dockerfile  README.md  cockpit-remote.md  deploy.sh  lessons.md  playbooks.md  startup.sh  teardown.sh  ttl_watchdog.sh  verified-live.md  volume-layout.md
scripts/: audit.py  autotrace_detect.py  bench.py  build_static.py  ceiling_eval.py  corpus_remote.py  dedup_gate.py  finalize_set.py  flight.py  gate2.py  label_split.py  perflab.py  pod_log.py  regen_audit500.py  relay_eval.py  sample_src.py  volume_put.py  watch.py  wreck.py  wreck_calibrate.py  wreck_preview.py
src/vecml/data/: pairs.py  wreck_otf.py
src/vecml/dedup/: __init__.py  bktree.py  gate.py  hashes.py
src/vecml/degrade/: __init__.py  audit.py  calibrate.py  idmap.py  labels.py  pipeline.py  renderer.py  wreck.py  wreck_v2.py
src/vecml/gate/: __init__.py  features.py
src/vecml/models/: unet.py
src/vecml/train/: loop.py
src/vecml/watch/: __init__.py  infer.py  server.py
src/vecml/watch/static/: index.html
tests/: test_dedup.py  test_degrade.py  test_idmap.py  test_pairs.py  test_unet.py
