[project]
name = "vecml"
version = "0.1.0"
description = "Neural front-end (cleanup + segmentation) for the vectorizer engine"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5",
    "torchvision",
    "numpy",
    "pillow",
    "opencv-python-headless",
    "webdataset",
    "pyyaml",
    "tqdm",
    "resvg-py>=0.3.3",
    "pyarrow>=25.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
baselines = ["vtracer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vecml"]

[tool.ruff]
line-length = 100
