[project]
name = "vecml"
version = "0.1.0"
description = "Neural front-end (cleanup + segmentation) for the vectorizer engine"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5",
    "torchvision",
    "numpy",
    "pillow",
    "opencv-python-headless",
    "webdataset",
    "pyyaml",
    "tqdm",
    "resvg-py>=0.3.3",
    "pyarrow>=25.0.0",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
baselines = ["vtracer"]

# RunPod hosts run CUDA 12.8 drivers; PyPI's newest torch is a cu130 build that
# refuses them. Pin Linux to the cu128 index (macOS keeps PyPI torch via MPS).
[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vecml"]

[tool.ruff]
line-length = 100
